# roadmap-projects

./: README.md
blogging-platform-api/: README.md  pyproject.toml
blogging-platform-api/app/: __init__.py  config.py  models.py  views.py
blogging-platform-api/tests/: test_posts.py
expense-tracker/: README.md  pyproject.toml
expense-tracker/expense_tracker/: __init__.py  __main__.py  cli.py  commands.py  config.py  expense.py  storage.py
expense-tracker/tests/: conftest.py  test_cli.py  test_cli_integration.py  test_commands.py  test_exception.py  test_expense.py  test_storage.py
github-activity/: README.md  pyproject.toml
github-activity/github_activity/: __init__.py  __main__.py  cli.py  commands.py  config.py  github_event.py  rest_api.py
number-guessing-game/: README.md  pyproject.toml
number-guessing-game/data/: scores.json
number-guessing-game/number_guessing_game/: __init__.py  __main__.py  config.py  game.py  score.py
number-guessing-game/tests/: conftest.py  test_game.py  test_score.py
personal-blog/: README.md  pyproject.toml
task-tracker/: README.md  pyproject.toml
task-tracker-2/: README.md  pyproject.toml
todo-list-api/: README.md  pyproject.toml  run.py
todo-list-api/app/: __init__.py  cli.py  config.py  models.py  schemas.py  utils.py  views.py
todo-list-api/tests/: conftest.py  test_auth.py  test_ratelimit.py  test_todos.py
unit-converter/: README.md
weather-api/: README.md  pyproject.toml  run.py
weather-api/app/: __init__.py  config.py  redis_client.py  views.py  weather_api.py
weather-api/tests/: test_api.py
(+27 files in other folders)
